update the image name if when the file gets selected
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -119,7 +119,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-addon"><span class="glyphicon glyphicon-tag"/></div>
-                            <input ng-model="disk.name" class="form-control" uib-tooltip="Virtual disk name">
+                            <input ng-model="disk.name" class="form-control" uib-tooltip="Virtual disk name" ng-change="nameChanged()">
                         </div>
                     </div>
 
