ui template and stubs for search functionality
Bug-Url: https://github.com/kerubistan/kerub/issues/140
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -171,5 +171,13 @@
                 <span><a href="apidoc/">api documentation</a></span><br>
             </div>
         </uib-tab>
+        <uib-tab-heading ng-controller="SearchController">
+            <div class="input-group">
+                <div class="input-group-addon">
+                    <span class="fa fa-search"></span>
+                </div>
+                <input class="form-control" placeholder="Search">
+            </div>
+        </uib-tab-heading>
     </uib-tabset>
 </div>
