--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,7 @@
     <script src="js/ExpectationMini.js"></script>
     <script src="js/DiskSelectionElem.js"></script>
     <script src="js/StorageDeviceRow.js"></script>
+    <script src="js/SearchController.js"></script>
     <link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="webjars/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="css/kerub.css" rel="stylesheet"/>
