virtual networks UI stub
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -68,7 +68,9 @@
             <uib-tab-heading>
                 <i class="fa fa-sitemap"></i> Virtual networks
             </uib-tab-heading>
-
+            <span ng-controller="VirtualNetworkTab">
+                <button type="button" class="btn btn-default glyphicon glyphicon-plus" uib-tooltip="Create new Virtual Network" tooltip-placement="right"></button>
+            </span>
         </uib-tab>
         <uib-tab >
             <uib-tab-heading>
