--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,7 @@
 	<script src="js/DiskSelectionElem.js"></script>
 	<script src="js/StorageDeviceRow.js"></script>
 	<script src="js/SearchController.js"></script>
+	<script src="js/VirtualNetworkTab.js"></script>
 	<link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 	<link href="webjars/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 	<link href="css/kerub.css" rel="stylesheet"/>
