--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -261,8 +261,7 @@
 									ng-model="vm.id"
 									class="form-control"
 									readonly
-									uib-tooltip="Virtual Machine unique identifier"
-									autofocus>
+									uib-tooltip="Virtual Machine unique identifier">
 						</div>
 					</div>
 					<div class="form-group">
