'join host' dialog: a bit more compact UI
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -173,6 +173,11 @@
                 <span><a href="apidoc/">api documentation</a></span><br>
             </div>
         </uib-tab>
+        <uib-tab>
+            <uib-tab-heading>
+                <i class="fa fa-balance-scale"></i> Status
+            </uib-tab-heading>
+        </uib-tab>
         <uib-tab-heading ng-controller="SearchController">
             <div class="input-group">
                 <div class="input-group-addon">
