join host ui: disable the button based if insufficent information given
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -535,7 +535,7 @@
 				type="button"
 				ng-click="addHost()"
 				class="btn btn-primary"
-				ng-disabled="inprg"
+				ng-disabled="inprg || host.address == '' || (!usepubkey && password.password == '') || host.publicKey == '' "
 		        uib-tooltip="Join this host to the IaaS service"
 				tooltip-placement="top">
 			<span ng-class="{false:'glyphicon glyphicon-ok-sign', true:'fa fa-refresh fa-spin'}[inprg]"></span>
