virtualstorage name annotation, some fixup around the socket subscribe and annoying log messages removed
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -22,7 +22,12 @@
                         <td>{{vm.name}}</td>
                         <td>{{vm.nrOfCpus}}</td>
                         <td>{{humanFriendlySize(vm.memory.min)}} - {{humanFriendlySize(vm.memory.max)}}</td>
-                        <td>{{vmdyn.load()}}</td>
+                        <td>
+                            <uib-progress ng-if="vmdyn.status == 'Up'" animate="false" value="dynamic" type="success">
+                                <uib-bar ng-value="3" type="default">sys</uib-bar>
+                                <uib-bar ng-value="10" type="success">usr</uib-bar>
+                            </uib-progress>
+                        </td>
                         <td>
                                 <span ng-repeat="expectation in _vm.expectations"
                                       ng-controller="ExpectationMini"
